--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,26 @@
   --foreground: #171717;
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #bebaba;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
